kubeobjs/grafana.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: grafana
    name: grafana
  spec:
    replicas: 1
    selector:
      app: grafana
      deploymentconfig: grafana
    template:
      metadata:
        labels:
          app: grafana
          deploymentconfig: grafana
      spec:
        containers:
        - image: grafana/grafana
          name: grafana
          ports:
          - containerPort: 3000
            protocol: TCP
          volumeMounts:
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
        volumes:
        - configMap:
            name: grafana-datasources
          name: grafana-datasources
    triggers:
        - type: ConfigChange
- apiVersion: v1
  kind: ConfigMap
  data: 
    influxdb.yml: |-
      datasources:
      - name: InfluxDB
        type: influxdb
        access: proxy
        database: iot_metrics
        url: http://influxdb
    prometheus.yaml: |-
      apiVersion: 1
      datasources:
      - name: Prometheus
        type: prometheus
        access: proxy
        url: http://prometheus
  metadata:
    labels:
      app: grafana
    name: grafana-datasources
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: grafana
    name: grafana
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: grafana
      deploymentconfig: grafana
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: grafana
    name: grafana
  spec:
    port:
      targetPort: 80-tcp
    to:
      kind: Service
      name: grafana
kind: List
