kubeobjs/influxdb.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: influxdb
    name: influxdb
  spec:
    replicas: 1
    selector:
      app: influxdb
      deploymentconfig: influxdb
    template:
      metadata:
        labels:
          app: influxdb
          deploymentconfig: influxdb
      spec:
        containers:
        - image: influxdb:alpine
          name: influxdb
          ports:
          - containerPort: 8086
            protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/influxdb
            name: influxdb-data
        - image: chronograf:alpine
          name: chronograf
          args: ["--influxdb-url=http://localhost:8086"]
          ports:
          - containerPort: 8888
            protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/chronograf
            name: chronograf-data
        volumes:
        - emptyDir: {}
          name: influxdb-data
        - emptyDir: {}
          name: chronograf-data
    triggers:
        - type: ConfigChange
- apiVersion: v1
  kind: ConfigMap
  data: 
    influxdb.conf: |-
      emptyfile
  metadata:
    labels:
      app: influxdb
    name: influxdb
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: influxdb
    name: influxdb
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 8086
    selector:
      app: influxdb
      deploymentconfig: influxdb
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: influxdb
    name: influxdb
  spec:
    port:
      targetPort: 80-tcp
    to:
      kind: Service
      name: influxdb
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: influxdb
    name: chronograf
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 8888
    selector:
      app: influxdb
      deploymentconfig: influxdb
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: influxdb
    name: chronograf
  spec:
    port:
      targetPort: 80-tcp
    to:
      kind: Service
      name: chronograf
kind: List
