kubeobjs/iot-site.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    name: iot-site
    labels:
      app: iot-site
- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: iot-site
    labels:
      app: iot-site
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: 'iot-site:latest'
    source:
      type: Binary
    strategy:
      type: Docker
      dockerStrategy:
        from:
          kind: DockerImage
          name: alpine:latest
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: iot-site
    labels:
      app: iot-site
  spec:
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames:
            - iot-site
          from:
            kind: ImageStreamTag
            name: iot-site:latest
    replicas: 1
    selector:
      app: iot-site
      deploymentconfig: iot-site
    template:
      metadata:
        labels:
          app: iot-site
          deploymentconfig: iot-site
        name: iot-site
      spec:
        containers:
          - name: iot-site
            image: ' '
            ports:
              - containerPort: 8000
                protocol: TCP
#            livenessProbe:
#              httpGet:
#                path: /
#                port: 8000
#                scheme: HTTP
- apiVersion: v1
  kind: Service
  metadata:
    name: iot-site
    labels:
      app: iot-site
  spec:
    ports:
      - name: 80-tcp
        protocol: TCP
        port: 80
        targetPort: 8000
    selector:
      app: iot-site
      deploymentconfig: iot-site
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: iot-site
    name: iot-site
  spec:
    port:
      targetPort: 80-tcp
    to:
      kind: Service
      name: iot-site
kind: List
