kubeobjs/prometheus.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: prometheus
    name: prometheus
  spec:
    replicas: 1
    selector:
      app: prometheus
      deploymentconfig: prometheus
    template:
      metadata:
        labels:
          app: prometheus
          deploymentconfig: prometheus
      spec:
        containers:
        - image: prom/prometheus
          name: prometheus
          ports:
          - containerPort: 9090
            protocol: TCP
          volumeMounts:
          - mountPath: /etc/prometheus
            name: config-volume
          - mountPath: /prometheus
            name: prometheus-data
        - image: prom/pushgateway
          name: pushgateway
          ports:
          - containerPort: 9091
            protocol: TCP
        volumes:
        - configMap:
            name: prometheus
          name: config-volume
        - emptyDir: {}
          name: prometheus-data
    triggers:
        - type: ConfigChange
- apiVersion: v1
  kind: ConfigMap
  data: 
    prometheus.yml: |-
      scrape_configs:
        - job_name: 'prometheus'
          scrape_interval: 5s
          static_configs:
               - targets: ['localhost:9090']
        - job_name: 'pushgateway'
          scrape_interval: 5s
          static_configs:
              - targets: ['localhost:9091']
  metadata:
    labels:
      app: prometheus
    name: prometheus
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: prometheus
    name: prometheus
  spec:
    ports:
    - name: 9090-tcp
      port: 9090
      protocol: TCP
      targetPort: 9090
    selector:
      app: prometheus
      deploymentconfig: prometheus
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: prometheus
    name: prometheus
  spec:
    port:
      targetPort: 9090-tcp
    to:
      kind: Service
      name: prometheus
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: prometheus
    name: pushgateway
  spec:
    ports:
    - name: 9091-tcp
      port: 9091
      protocol: TCP
      targetPort: 9091
    selector:
      app: prometheus
      deploymentconfig: prometheus
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: prometheus
    name: pushgateway
  spec:
    port:
      targetPort: 9091-tcp
    to:
      kind: Service
      name: pushgateway
kind: List
